--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="images/rohit.png" alt=""></td>
+      <td><img src="images/Rohit.png" alt=""></td>
       <td><h1> Rohit Mehta </h1>
       <p><em>Creator of this <strong>Website</strong></em></p>
       <p>Hi this is Rohit mehta.I have Completed Computer Science and engineering from ViT university.I am starting to learn Web development.</p></td>
